# llm_langchain_rag

./: .env.template  .gitignore  LICENSE  README.md  global_settings.toml  main.py  prepare_vector_db.py  pyproject.toml
data/db/: index.pkl
scripts/: set_pypath.sh
utilities/: settings.py
