[tool.poetry]
name = "llm-langchain-rag"
version = "0.1.0"
description = "Study LLM Multilingual + Langchain + RAG"
authors = ["Hiep Dinh <hoanghiepitvnn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ctransformers = "^0.2.27"
transformers = "^4.44.2"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
torch = "^2.4.1"
pypdf = "^5.0.0"
sentence-transformers = "^3.1.1"
faiss-cpu = "^1.8.0.post1"
openai = "^1.46.1"
ollama = "^0.3.3"
langchain-ollama = "^0.2.0"
toml = "^0.10.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
